--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <button type="button" class="btn btn-dark click-button">Click Dad's Song</button>
 
 <!--        <button type="button" class="btn btn-outline-light click-botton"><a href="https://www.youtube.com/watch?v=dng8d8IXNME">Click Dad's Song</a></button>-->
-          <button type="button" class="btn btn-outline-light click-button">Click Dad's Song</button>
+          <button type="button" class="btn btn-outline-light click-button">Click Dad Song</button>
       </div>
 
       <div class="col-lg-6">
